<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bmi">BMI</string>
    <string name="kcal">Kcal</string>
    <string name="recipies">Recipies</string>
    <string name="twoje_bmi">Twoje BMI</string>
    <string name="oblicz_bmi">Oblicz BMI</string>
    <string name="waga_kg">Waga kg</string>
    <string name="wzrost_cm">Wzrost cm</string>
    <string name="calculate_kcal">Calculate kcal</string>
    <string name="wiek">Wiek</string>
    <string name="calculate">Calculate</string>
    <string name="m">M</string>
...
